src/styles/minimal.css
:root {
  --bg-color: #eee;
  --font-color: #444;
  --link-color: #1447e6;
}

/* Credits: http://bettermotherfuckingwebsite.com */
body {
  display: flex;
  flex-direction: column;
  background-color: var(--bg-color);
  margin: 40px auto;
  min-height: calc(100vh - 80px);
  max-width: 650px;
  line-height: 1.6;
  font-size: 18px;
  color: var(--font-color);
  padding: 0 10px;
}
h1,
h2,
h3 {
  line-height: 1.2;
}

/* Credits: https://github.com/tailwindlabs/tailwindcss */
.sr-only {
  clip-path: inset(50%);
  white-space: nowrap;
  border-width: 0;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  position: absolute;
  overflow: hidden;
}

.nav-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

.nav-link {
  text-decoration: none;
  color: var(--font-color);
  font-weight: bold;
}
.nav-link:hover {
  text-decoration: underline;
  color: var(--link-color);
}

.italic {
  font-style: italic;
}

